Renamed performance test class for consistency.